Fixed overlapping of divs

--- a/src/components/Confirm/style.css
+++ b/src/components/Confirm/style.css
@@ -8,10 +8,19 @@
    */
   height: calc(~"100% - 112px");
   width: 100%;
-  position: absolute;
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  @media (--large) {
+    top: 32px;
+  }
+}
+
+.previewsContainer :global .onfido-sdk-ui-Title-titleWrapper {
+  @media (--large) {
+    margin-top: 0;
+  }
 }
 
 .actionsContainer {
