--- a/src/components/Error/style.css
+++ b/src/components/Error/style.css
@@ -4,11 +4,10 @@
   border-radius: 6px;
   text-align: left;
   color: #FFFFFF;
-  margin: 16px 24px;
+  margin: 0 24px 16px;
   padding: 20px 24px;
   @media (--small-viewport) {
     padding: 16px;
-    margin-top: 0;
     margin-bottom: 48px;
   }
 }
